Mais filme menos visual
adicionei um filme na lista, mudei a fonte e mudei a cor do background

--- a/teste.html
+++ b/teste.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste</title>
 </head>
-<body style="font-family: sans-serif; background-color: rgba(255, 255, 0, 0.189);">
+<body>
 
     <h3>Filmes que pretendo olhar:</h3>
 
@@ -15,6 +15,10 @@
         <br>
 
         <li>Deadpool e Wolverine</li>
+        
+        <br>
+
+        <li>Minions 2</li>
      </ol>
 
 </body>
